# FRA-Atlas

./: .env  .env.production  .gitattributes  .gitignore  AI_SATELLITE_DSS_IMPLEMENTATION.md  ATLAS_ACCESS_CHANGES.md  AUTHENTICATION_SETUP.md  CLOUD_DEPLOYMENT_STEPS.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPLETE_SETUP_GUIDE.md  COMPREHENSIVE_USER_GUIDE.md  DARK_LIGHT_MODE_IMPLEMENTATION.md  DATABASE_SETUP_GUIDE.md  DATA_MANAGEMENT_FIXES_COMPLETED.md  DEPLOYED_BACKEND_FIX.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_RENDER_VERCEL.md  DIGITAL_GIS_PLOT_GUIDE.md  FINAL_FIXES_COMPLETED.md  FINAL_FIX_INSTRUCTIONS.md  FINAL_PROFESSIONAL_SOLUTION.md  FINAL_RESOLUTION_STATUS.md  FINAL_SYSTEM_STATUS.md  FOREST_DATA_FINAL_FIX.md  FOREST_DATA_FIX_SUMMARY.md  FRA_SYSTEM_IMPLEMENTATION.md  GEE_DSS_SETUP_GUIDE.md  GEOSPATIAL_FEATURES_GUIDE.md  HYBRID_DSS_SETUP.md  IMPLEMENTATION_GUIDE.md  MAKE-ALL-WORK.bat  MAPBOX_SETUP.md  MAPBOX_TOKEN_SETUP.md  ML_MODEL_OPTIONS.md  NETLIFY_DEPLOYMENT_GUIDE.md  PROBLEM_STATEMENT_ALIGNMENT.md  PROFESSIONAL_UI_GUIDE.md  (+83 more)
backend/: .env  .env.production  Dockerfile  add-users.js  create-sample-users.js  full-migration.js  generate-hash.js  local-export.js  migrate-local-data.js  package-lock.json  package.json  (+3 more)
data-processor/: Dockerfile  advanced_satellite_engine.py  dss_engine.py  hybrid_dss_engine.py  hybrid_dss_fixed.py  hybrid_dss_simple.py  main.py  minimal_advanced_engine.py  pyproject.toml  realtime_satellite_engine.py  requirements.txt  requirements_hybrid.txt  requirements_hybrid_fixed.txt  satellite_asset_engine.py  simple_advanced_engine.py  test_gee_connection.py
data-processor/models/: gradient_boost_model.pkl  neural_network_model.pkl  random_forest_model.pkl  random_forest_scaler.pkl
data-processor/src/: main.py
data-processor/src/services/: archive_manager.py  document_digitizer.py  geospatial_processor.py
(+201 files in other folders)
